CSS page, fonts, background color

--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
-!DOCTYPE html>
 <html>
   <head>
     <title> Project 2 </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display
+:ital,wght@0,400..900;1,400..900&family=Playwrite+US+Trad:wght@100..400&display=swap"
+ rel="stylesheet">
+ 
   </head>
 
   <body>
+    <div class="text-container">
+
     <header> 
       <nav>
         <a href="About">Jump to About Me</a>
+        <br>
         <a href="Facts">Jump to Facts</a>
+        <br>
         <a href="Contact">Jump to Contact</a>
       </nav>
     </header>
@@ -21,10 +30,10 @@
           I was born and raised in Montana. Outside of school I love hiking, painting, and going on roadtrips. Welcome to my one-page site. 
           Here you will find facts I have learned about web design and contact information. </h1>
       </div>
-      <img src="https://i.postimg.cc/dQBTqXCD/20240217-155505.jpg" 
-      alt="Amanda, red head girl, infront of glacier lake and mountians" title="Amanda in Glacier" width="40%" />
-      <img src="https://i.postimg.cc/PJgGGKdH/20240322-155543-1.jpg" 
-      alt="hiking trail to overlook of mountian peak" title="Hiking in Montana" width="40%" />
+      <img src="https://i.postimg.cc/L88HvN4W/20240217-155505.jpg" 
+      alt="Amanda, red head girl, infront of glacier lake and mountians" title="Amanda in Glacier" width="300" />
+      <img src="https://i.postimg.cc/KvNGndbL/20240322-155543-1.jpg" 
+      alt="hiking trail to overlook of mountian peak" title="Hiking in Montana" width="300" />
 
       <div id="Facts">
         <h1>Facts</h1>
@@ -43,7 +52,7 @@
       <div id="Contact">
         <h1>Contact</h1>
         <legend>Contact Us!</legend>
-        <label>Email:<br />
+        <label>Email:<br>
           <input type="text" name="email" /> </label>
            
   <p> Questions, Comments, or Concerns:
@@ -52,14 +61,13 @@
        <input type="submit" name="subscribe" value="Subscribe"/>
       </div>
 
-
-      <!-- Main content of the page -->
+    </div>
     </main>
     
     <footer>
       <p>Author: Amanda Mazur <br>
       <a href="amandamazur19@gmail.com">amandamazur19.com</a></p>
-      <p> (406)274-xxxx</p>
+      <p> (406) 274-xxxx</p>
     </footer>
   </body>
 </html>
