image centered, section title class and font and center

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display
 :ital,wght@0,400..900;1,400..900&family=Playwrite+US+Trad:wght@100..400&display=swap"
  rel="stylesheet">
- 
+
   </head>
 
   <body>
@@ -23,20 +23,23 @@
     </header>
     
     <main>
-    
       <div id="About">
+      <div class="sectionTitle">
         <h1>About</h1>
+      </div>
         <h1> Hi! My name is Amanda. I am studying Art and Business at the University of Montana. 
           I was born and raised in Montana. Outside of school I love hiking, painting, and going on roadtrips. Welcome to my one-page site. 
           Here you will find facts I have learned about web design and contact information. </h1>
       </div>
       <img src="https://i.postimg.cc/L88HvN4W/20240217-155505.jpg" 
-      alt="Amanda, red head girl, infront of glacier lake and mountians" title="Amanda in Glacier" width="300" />
+      alt="Amanda, red head girl, infront of glacier lake and mountians" title="Amanda in Glacier" width="300" class="image" />
       <img src="https://i.postimg.cc/KvNGndbL/20240322-155543-1.jpg" 
-      alt="hiking trail to overlook of mountian peak" title="Hiking in Montana" width="300" />
+      alt="hiking trail to overlook of mountian peak" title="Hiking in Montana" width="300" class="image"/>
 
       <div id="Facts">
+        <div class="sectionTitle">
         <h1>Facts</h1>
+        </div>
         <ul>
           <li> The Internet is a mesh network or a system that spans many networks</li>
           <li> There is no central location in internet which signals get directed toward before reaching their destination</li>
@@ -50,7 +53,9 @@
       </div>
 
       <div id="Contact">
+        <div class="sectionTitle">
         <h1>Contact</h1>
+        </div>
         <legend>Contact Us!</legend>
         <label>Email:<br>
           <input type="text" name="email" /> </label>
