header text align, br in contact

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="About me and web design">
+    <meta name="author" content="Amanda">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Project 2 </title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display
@@ -61,7 +67,8 @@
           <input type="text" name="email" /> </label>
            
   <p> Questions, Comments, or Concerns:
-    <textarea name="comments" id="test-textarea" maxlength="500" >Enter up to 500 characters...</textarea>
+    <textarea name="comments" id="test-textarea" maxlength="500" > <br>
+      Enter up to 500 characters...</textarea>
            </p>
        <input type="submit" name="subscribe" value="Subscribe"/>
       </div>
