--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
         <label>Email:<br>
           <input type="text" name="email" /> </label>
            
-  <p> Questions, Comments, or Concerns:
-    <textarea name="comments" id="test-textarea" maxlength="500" > <br>
-      Enter up to 500 characters...</textarea>
+  <p> Questions, Comments, or Concerns: <br>
+    <textarea name="comments" id="test-textarea" maxlength="500" > Enter up to 500 characters...</textarea>
            </p>
        <input type="submit" name="subscribe" value="Subscribe"/>
       </div>
