--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
 
     <header> 
       <nav>
-        <a href="About">Jump to About Me</a>
+        <a href="#About">Jump to About Me</a>
         <br>
-        <a href="Facts">Jump to Facts</a>
+        <a href="#Facts">Jump to Facts</a>
         <br>
-        <a href="Contact">Jump to Contact</a>
+        <a href="#Contact">Jump to Contact</a>
       </nav>
     </header>
     
     <main>
       
       <img src="https://i.postimg.cc/NG7KVGM5/mountians.jpg" 
-      alt="Glacier mountians and pine trees" title="Glacier mountians" width="650" class="image"/>
+      alt="Glacier mountians and pine trees" title="Glacier mountians" width="800" class="image"/>
 
       <div id="About">
       <div class="sectionTitle">
