--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     
     <main>
-      <div id="glacier image" class="image">
+      <div id="glacier image" class="glacierImage">
       <img src="https://i.postimg.cc/NG7KVGM5/mountians.jpg" 
       alt="Glacier mountians and pine trees" title="Glacier mountians" width="800" class="image"/>
     </div>
@@ -41,7 +41,7 @@
           I was born and raised in Montana. Outside of school I love hiking, painting, and going on roadtrips. Welcome to my one-page site. 
           Here you will find facts I have learned about web design and contact information. </h1>
       </div>
-      <div id="amandaImage" class="image">
+      <div id="Amanda" class="amandaImage">
 
       <img src="https://i.postimg.cc/L88HvN4W/20240217-155505.jpg" 
       alt="Amanda, red head girl, infront of glacier lake and mountians" title="Amanda in Glacier" width="250" class="image" />
