--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     </header>
     
     <main>
-      <div id="glacier image" class="glacierImage">
+
       <img src="https://i.postimg.cc/NG7KVGM5/mountians.jpg" 
-      alt="Glacier mountians and pine trees" title="Glacier mountians" width="800" class="image"/>
-    </div>
+      alt="Glacier mountians and pine trees" title="Glacier mountians" class="glacierImage"/>
+
       <div id="About">
       <div class="sectionTitle">
         <h1>About</h1>
@@ -41,11 +41,10 @@
           I was born and raised in Montana. Outside of school I love hiking, painting, and going on roadtrips. Welcome to my one-page site. 
           Here you will find facts I have learned about web design and contact information. </h1>
       </div>
-      <div id="Amanda" class="amandaImage">
 
       <img src="https://i.postimg.cc/L88HvN4W/20240217-155505.jpg" 
-      alt="Amanda, red head girl, infront of glacier lake and mountians" title="Amanda in Glacier" width="250" class="image" />
-    </div>
+      alt="Amanda, red head girl, infront of glacier lake and mountians" title="Amanda in Glacier" width="250" class="amandaImage" />
+      
       <div id="Facts">
         <div class="sectionTitle">
         <h1>Facts</h1>
